--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
-    <nav class="navbar navbar-expand-lg navbar-light" data-spy="affix" data-offset-top="0">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" data-spy="affix" data-offset-top="0">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="assets/imgs/logo.svg" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="infos">
                 <h6 class="subtitle">hello,I'm</h6>
-                <h6 class="title">James Smith</h6>
+                <h6 class="title">Kadir YALÇIN</h6>
                 <p>.NET Developer</p>
                 <div class="socials mt-4">
                     <a class="social-item" href="http://www.linkedin.com/in/lkadiryalcinl" target="_blank"><i class="fa fa-github"></i></a>
@@ -53,22 +53,6 @@
                 <img src="assets/imgs/man.svg" alt="">
             </div>
         </div>
-
-        <!-- Header-widget -->
-        <div class="widget">
-            <div class="widget-item">
-                <h2>124</h2>
-                <p>Happy Clients</p>
-            </div>
-            <div class="widget-item">
-                <h2>456</h2>
-                <p>Project Completed</p>
-            </div>
-            <div class="widget-item">
-                <h2>789</h2>
-                <p>Awards Won</p>
-            </div>
-        </div>
     </header>
     <!-- End of Page Header -->
 
@@ -77,17 +61,16 @@
         <div class="container mt-5">
             <div class="row text-center text-md-left">
                 <div class="col-md-3">
-                    <img src="assets/imgs/avatar.jpg" alt="" class="img-thumbnail mb-4">
+                    <img src="assets/imgs/foto.jpeg" alt="" class="img-thumbnail mb-4">
                 </div>
                 <div class="pl-md-4 col-md-9">
-                    <h6 class="title">James Smith</h6>
-                    <p class="subtitle">UI/UX Designer</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem
-                        voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum
-                        repudiandae quidem quod, magni magnam.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui
-                        temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum
-                        repellendus consequatur ullam voluptatum asperiores.</p>
+                    <h6 class="title">Kadir Yalçın</h6>
+                    <p class="subtitle">.NET Developer</p>
+                    <p>Hello I'm Kadir YALÇIN. I'm a computer engineering student at Süleyman Demirel university. Computer engineering is my passion since i was a kid. </p>
+                    <p>I have loved computers since I was a kid. At university I started to like coding even more. I did a lot of things but
+                        I choose to focus on full stack development. I'm believing that a software developer should'nt limit himself. I'm
+                        good at C# and Javascript. Because of that I'm using .Net for backend, React and React Native for frontend.
+                        Software world is so open to change and i'm ready to it.</p>
                     <a class="btn btn-primary rounded mt-3 text-white" href="./CV - Kadir Yalçın.pdf" download>DOWNLOAD CV</a>
                 </div>
             </div>
@@ -97,36 +80,35 @@
         <div class="container text-center">
             <h6 class="subtitle">Skills</h6>
             <h6 class="section-title mb-4">Why Choose me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">I am currently focusing more on .NET development, but I have an interest and knowledge in React and React Native as well because I aspire to become a full-stack developer.</p>
 
             <div class="row text-left">
                 <div class="col-sm-6">
-                    <h6 class="mb-3">Photoshop</h6>
+                    <h6 class="mb-3">ASP.NET Core API</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 75%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>89%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">Web Design</h6>
+                    <h6 class="mb-3">ASP.NET Core MVC</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 83%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 65%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>83%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">App Design</h6>
+                    <h6 class="mb-3">React</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 95%;" aria-valuenow="25"
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>95%</span></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h6 class="mb-3">SEO</h6>
+                    <h6 class="mb-3">React Native</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 90%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
             </div>
@@ -138,9 +120,8 @@
     <section id="portfolio" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Portfolio</h6>
-            <h6 class="section-title mb-4">Check My Wonderful Works</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <h6 class="section-title mb-4">Check My Wonderful Projects</h6>
+            <p class="mb-5 pb-4">Take a look at the projects I have developed.</p>
 
             <div class="row">
                 <div class="col-sm-4">
@@ -217,19 +198,18 @@
         <div class="container text-center">
             <h6 class="subtitle">Contact</h6>
             <h6 class="section-title mb-4">Get In Touch With Me</h6>
-            <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br>
-                rerum commodi corrupti, temporibus non quam.</p>
+            <p class="mb-5 pb-4">You can contact me any time you want.</p>
 
             <div class="contact">
                 <div class="form">
-                    <h6 class="section-title mb-4">İletişim</h6>
+                    <h6 class="section-title mb-4">Contact</h6>
                     <form>
                         <div class="form-group">
-                            <input type="email" class="form-control" id="email" placeholder="E-Mail" required>
+                            <input type="email" class="form-control" id="email" placeholder="Mail" required>
                         </div>
                         <div class="form-group">
                             <textarea name="contact-message" id="" cols="30" rows="5" class="form-control"
-                                placeholder="Mesajınız"></textarea>
+                                placeholder="Message"></textarea>
                         </div>
                         <div class="d-flex justify-content-center">
                             <button type="submit" class="btn btn-primary rounded w-25">Send Message</button>
