--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#skill">Skills</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
@@ -38,15 +41,17 @@
         </div>
     </nav>
 
-    <header class="header" id="home">
+    <header class="header" id="home" style="height: 100vh;">
         <div class="container">
             <div class="infos">
                 <h6 class="subtitle">hello,I'm</h6>
                 <h6 class="title">Kadir YALÇIN</h6>
                 <p>.NET Developer</p>
                 <div class="socials mt-4">
-                    <a class="social-item" href="http://www.linkedin.com/in/lkadiryalcinl" target="_blank"><i class="fa fa-github"></i></a>
-                    <a class="social-item" href="http://www.github.com/lkadiryalcinl" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a class="social-item" href="http://www.linkedin.com/in/lkadiryalcinl" target="_blank"><i
+                            class="fa fa-github"></i></a>
+                    <a class="social-item" href="http://www.github.com/lkadiryalcinl" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="img-holder">
@@ -54,9 +59,7 @@
             </div>
         </div>
     </header>
-    <!-- End of Page Header -->
 
-    <!-- About section -->
     <section id="about" class="section mt-3">
         <div class="container mt-5">
             <div class="row text-center text-md-left">
@@ -66,42 +69,63 @@
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Kadir Yalçın</h6>
                     <p class="subtitle">.NET Developer</p>
-                    <p>Hello I'm Kadir YALÇIN. I'm a computer engineering student at Süleyman Demirel university. Computer engineering is my passion since i was a kid. </p>
-                    <p>I have loved computers since I was a kid. At university I started to like coding even more. I did a lot of things but
-                        I choose to focus on full stack development. I'm believing that a software developer should'nt limit himself. I'm
-                        good at C# and Javascript. Because of that I'm using .Net for backend, React and React Native for frontend.
+                    <p>Hello I'm Kadir YALÇIN. I'm a computer engineering student at Süleyman Demirel university.
+                        Computer engineering is my passion since i was a kid. About my hobbies i like to read and write
+                        poem and story.</p>
+                    <p>I have loved computers since I was a kid. At university I started to like coding even more. I did
+                        a lot of things but
+                        I choose to focus on full stack development. I'm believing that a software developer should'nt
+                        limit himself. I'm
+                        good at C# and Javascript. Because of that I'm using .Net for backend, React and React Native
+                        for frontend.
                         Software world is so open to change and i'm ready to it.</p>
-                    <a class="btn btn-primary rounded mt-3 text-white" href="./CV - Kadir Yalçın.pdf" download>DOWNLOAD CV</a>
+                    <a class="btn btn-primary rounded mt-3 text-white" href="./CV - Kadir Yalçın.pdf" download>DOWNLOAD
+                        CV</a>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section">
+    <section id="skill" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Skills</h6>
             <h6 class="section-title mb-4">Why Choose me</h6>
-            <p class="mb-5 pb-4">I am currently focusing more on .NET development, but I have an interest and knowledge in React and React Native as well because I aspire to become a full-stack developer.</p>
+            <p class="mb-5 pb-4">I am currently focusing more on .NET development, but I have an interest and knowledge
+                in React and React Native as well because I aspire to become a full-stack developer.</p>
 
             <div class="row text-left">
                 <div class="col-sm-6">
-                    <h6 class="mb-3">ASP.NET Core API</h6>
+                    <h6 class="mb-3">C#</h6>
                     <div class="progress">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: 75%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>89%</span></div>
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 85%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">Javascript</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">ASP.NET Core MVC</h6>
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 65%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>83%</span></div>
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <h6 class="mb-3">React</h6>
                     <div class="progress">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100"><span>95%</span></div>
+                            aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h6 class="mb-3">ASP.NET Core API</h6>
+                    <div class="progress">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 75%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -114,9 +138,6 @@
             </div>
         </div>
     </section>
-    <!-- End of Skills sections -->
-
-    <!-- Portfolio section -->
     <section id="portfolio" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Portfolio</h6>
@@ -124,91 +145,91 @@
             <p class="mb-5 pb-4">Take a look at the projects I have developed.</p>
 
             <div class="row">
-                <div class="col-sm-4">
+                <div class="row d-sm-block">
                     <div class="img-wrapper">
-                        <img src="assets/imgs/folio-1.jpg" alt="">
+                        <img src="assets/imgs/Hotel-Manager.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-2.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <h5>Hotel Manager</h5>
+                                <a href="https://github.com/lkadiryalcinl/HotelManager" target="_blank"><i
+                                        class="fa fa-link"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-3.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            </div>
+                <div class="col-sm-6">
+                    <div class="img-wrapper d-flex justify-content-around align-items-center" style="background-color: purple;">
+                        <div class="text-white">
+                            <h3 class="text-monospace">Trimania</h3>
                         </div>
-                    </div>
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-4.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                        <div class="d-block">
+                            <img src="assets/imgs/Trimania.png" alt="" class="h-auto p-4" style="max-width: 200px;">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Trimania</h5>
+                                    <a href="https://github.com/lkadiryalcinl/Trimania" target="_blank"><i
+                                            class="fa fa-link"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-5.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                <div class="col-sm-6">
+                    <div class="img-wrapper d-flex justify-content-around align-items-center" style="background-color: lightgray;">
+                        <div>
+                            <div class="text-white">
+                                <h3 class="text-monospace ">Prototype</h3>
+                                <h3 class="text-monospace ">Workshop SDU</h3>                                
                             </div>
                         </div>
-                    </div>
-                    <div class="img-wrapper">
-                        <img src="assets/imgs/folio-6.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                        <div class="d-block">
+                            <img src="assets/imgs/PrototypeWorkshopSDU.png" alt="" class="h-auto p-4" style="max-width: 210px;">
+                            <div class="overlay">
+                                <div class="overlay-infos">
+                                    <h5>Prototype Workshop SDU</h5>
+                                    <a href="https://https://github.com/Zecky-dev/PrototypeWorkshopSDU" target="_blank"><i
+                                            class="fa fa-link"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <div class="row-sm-12">
+                <div class="img-wrapper d-flex justify-content-around align-items-center" style="background-color: lightgray;">
+                    <div>
+                        <div class="text-white">
+                            <h3 class="text-monospace ">Weather App</h3>                        
+                        </div>
+                    </div>
+                    <div class="d-block">
+                        <img src="assets/imgs/WeatherApp.png" alt="" class="h-auto p-4" style="max-width: 200px;">
+                        <div class="overlay">
+                            <div class="overlay-infos">
+                                <h5>Weather App</h5>
+                                <a href="https://github.com/lkadiryalcinl/WeatherAppRN" target="_blank"><i
+                                        class="fa fa-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="contact" class="position-relative section">
-        <div class="container text-center">
+    <section id="contact" class="d-flex h-100 justify-content-center align-items-center">
+        <div class="container text-center p-4">
             <h6 class="subtitle">Contact</h6>
             <h6 class="section-title mb-4">Get In Touch With Me</h6>
             <p class="mb-5 pb-4">You can contact me any time you want.</p>
-
-            <div class="contact">
-                <div class="form">
+            <div class="contact" style="width: 100vw;">
+                <div class="d-block w-100 p-4">
                     <h6 class="section-title mb-4">Contact</h6>
-                    <form>
+                    <form style="width: auto;">
                         <div class="form-group">
                             <input type="email" class="form-control" id="email" placeholder="Mail" required>
                         </div>
                         <div class="form-group">
-                            <textarea name="contact-message" id="" cols="30" rows="5" class="form-control"
+                            <textarea name="contact-message" id="message" cols="30" rows="5" class="form-control"
                                 placeholder="Message"></textarea>
                         </div>
                         <div class="d-flex justify-content-center">
