link update on home part.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <div class="infos">
                 <h6 class="subtitle">hello,I'm</h6>
                 <h6 class="title">Kadir YALÇIN</h6>
-                <p>.NET Developer</p>
+                <p>Full-Stack .NET Developer</p>
                 <div class="socials mt-4">
-                    <a class="social-item" href="http://www.linkedin.com/in/lkadiryalcinl" target="_blank"><i
-                            class="fa fa-github"></i></a>
                     <a class="social-item" href="http://www.github.com/lkadiryalcinl" target="_blank"><i
+                            class="fa fa-github"></i></a>
+                    <a class="social-item" href="http://www.linkedin.com/in/lkadiryalcinl" target="_blank"><i
                             class="fa fa-linkedin"></i></a>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Kadir Yalçın</h6>
-                    <p class="subtitle">.NET Developer</p>
+                    <p class="subtitle">Full-Stack .NET Developer</p>
                     <p>Hello I'm Kadir YALÇIN. I'm a computer engineering student at Süleyman Demirel university.
                         Computer engineering is my passion since i was a kid. About my hobbies i like to read and write
                         poem and story.</p>
