--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="row-sm-12">
-                <div class="img-wrapper d-flex justify-content-around align-items-center" style="background-color: lightgray;">
+                <div class="img-wrapper d-flex justify-content-around align-items-center" style="background-color: lightblue;">
                     <div>
                         <div class="text-white">
                             <h3 class="text-monospace ">Weather App</h3>                        
