prototype workshop sdu problem solved.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <div class="overlay d-flex justify-content-center align-items-center">
                                 <div class="overlay-infos">
                                     <h5>Prototype Workshop SDU</h5>
-                                    <a href="https://https://github.com/Zecky-dev/PrototypeWorkshopSDU" target="_blank"><i
+                                    <a href="https://github.com/Zecky-dev/PrototypeWorkshopSDU" target="_blank"><i
                                             class="fa fa-link"></i></a>
                                 </div>
                             </div>
